--- a/client/package.json
+++ b/client/package.json
@@ -2,20 +2,15 @@
 	"name": "client",
 	"version": "0.1.0",
 	"private": true,
-	"options": {
-		"allowedHosts": [
-			"localhost",
-			".localhost"
-		],
-		"proxy": "http://localhost:3001"
-	},
+	"proxy": "http://localhost:3001",
 	"dependencies": {
-		"@testing-library/jest-dom": "^5.16.5",
-		"@testing-library/react": "^13.4.0",
-		"@testing-library/user-event": "^13.5.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-scripts": "5.0.1",
+		"@testing-library/jest-dom": "^5.11.4",
+		"@testing-library/react": "^11.1.0",
+		"@testing-library/user-event": "^12.1.10",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-router-dom": "^6.4.2",
+		"react-scripts": "^4.0.2",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
